-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.0
-
None
-
37468f383c3fd6f16714ea8861c4632ed855bde0 (qt/qtdeclarative/wip/cmake)
The WorkerScript QML module is referenced in some overview documentation, but the link target - http://doc.qt.io/qt-5/workerscript-qmlmodule.html - does not work.
Instead, the WorkerScript QML module documentation is available under http://doc.qt.io/qt-5/qml-workerscript.html .
See e.g. http://doc.qt.io/qt-5/threads-technologies.html for a page containing invalid links.