Doc: Use correct \inqmlmodule for WorkerScript QML Type documentation

Fixes: QTBUG-73112
Change-Id: Iff8419a10fb3408bec52160a8d2366860f9171d9
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>